Fix alignment of grids

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -7,7 +7,7 @@
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: min-content 0.5fr 9fr 1fr;
+  /* grid-template-rows: min-content 0.5fr 9fr 1fr; */
   gap: 4px;
 
 }
@@ -51,8 +51,7 @@
   grid-area: 2 / 1 / 4 / 2;
   display: grid;
   gap: 48px;
-  align-items: start;
-  grid-template-rows: repeat(4, 150px);
+  /* grid-template-rows: repeat(4, 150px); */
 }
 
 .sidebar > * {
@@ -112,12 +111,14 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
